# style-genie

./: .$pipeline.drawio.bkp  .$pipeline.drawio.dtmp  .gitignore  README.md  data.json  docker-compose.yml  pinecone_data.json  pipeline.drawio
backend/postgres/: docker-compose.py
backend/server/: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  setup.py
backend/server/source/: index.rst
backend/server/src/: main.py
backend/server/src/agent/: session.py  tools.py
backend/server/src/agent/old/: agent_litellm.py
backend/server/src/agent/workflows/: advisor1.py
backend/server/src/ai/: img_to_img.py
backend/server/src/mcp/: mcp.py
backend/server/src/mcp/example/: call_mcp.py
backend/server/src/mcp/old/: mcp gemini.py  mcp_openwebui.py
dashboard/: index.html  script.js  style.css
data/: data.json
data/raw_data/: men_output_1.json  men_output_2.json  men_output_4.json  women_output_4.json
demo/: bun.lockb  package-lock.json  package.json
demo/src/: App.js
docs/: pipeline.drawio
examples/backend/: openwebui-example.py
fashion_agent/: agent.py  requirements.txt  server.py
fastapi/: main.py
frontend/: index.html
mcp/: mcp.py  mcp_local_ollama.py  openwebui-example.py
pinecone/: index.py  request.py  requestCurl.py  upser.t.py  upsert.py
scraper/: 4ai.py  geminiy.py  pinecone_json_processing.py  process_files.py  proxies.agent  proxies.json  scraper.py
ssense_data/: men_output_3.json  women_output_1.json  women_output_2.json  women_output_3.json
(+45 files in other folders)
